# rssreader

./: Cargo.toml  LICENSE_MIT  README.md
rssfront/: app.js  app.json  index.html  workspace.json
rssfront/app/form/: ChannelAdd.js
rssfront/app/model/: Channel.js  Post.js
rssfront/app/store/: Channels.js  Posts.js
rssfront/app/util/: Config.js
rssfront/app/view/: Channels.js  Main.js  Posts.js
src/: lib.rs  main.rs  utils.rs
