[package]
name = "rssreader"
version = "0.1.0"
authors = ["Vsevolod Velichko <torkvema@gmail.com>"]
edition = "2018" 
license = "MIT"

[[bin]]
name = "rssreader"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
futures = "0.1.25"
rss = { version = "1.7.0", features = ["from_url"] }
serde = { version = "1.0.80", features = ["derive"] }
serde_json = "1.0.39"
actix = "0.8.0-alpha.2"
actix-rt = "0.2.2"
actix-web = "1.0.0-alpha.2"
listenfd = "0.3.3"  # for fast reload
env_logger = "0.6.1"
log = "0.4.6"
